optimize front page

--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -138,7 +138,7 @@
         <!-- Direct Chat -->
         <h5 class="mb-2">热门经验</h5>
         <div class="row">
-              <div class="col-md-6">
+            <div class="col-md-6">
                 <!-- Box Comment -->
                 <div class="card card-widget">
                     <div class="card-header">
@@ -174,23 +174,6 @@
                             这需要更多的代码行。为了访问其他子网上的其他计算机，我们需要一条路由来告知流量到Cisco路由器。
                             这是那条线：＃/ sbin / route add -net 192.168.0.0 gw 192.168.254.254 netmask
                             255.255.0.0 dev eth1</p>
-
-                        <!-- Attachment -->
-                        <div class="attachment-block clearfix">
-                            <img class="attachment-img" src="../dist/img/photo1.png" alt="Attachment Image">
-
-                            <div class="attachment-pushed">
-                                <h4 class="attachment-heading"><a href="http://www.lipsum.com/">DELL 服务器安装指导说明书</a></h4>
-
-                                <div class="attachment-text">
-                                    本手册介绍了此款服务器的技术特性与系统的设置、安装，有助于您更详细地了解和便捷地使用此款服务器……
-                                    <a href="#">more</a>
-                                </div>
-                                <!-- /.attachment-text -->
-                            </div>
-                            <!-- /.attachment-pushed -->
-                        </div>
-                        <!-- /.attachment-block -->
 
                         <!-- Social sharing buttons -->
                         <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i> 分享</button>
@@ -243,110 +226,94 @@
                 <!-- /.card -->
             </div>
             <!-- /.col -->
-              <div class="col-md-6">
-                  <!-- Box Comment -->
-                  <div class="card card-widget">
-                      <div class="card-header">
-                          <div class="user-block">
-                              <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
-                              <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
-                              <span class="description">Shared publicly - 7:30 PM Today</span>
-                          </div>
-                          <!-- /.user-block -->
-                          <div class="card-tools">
-                              <button type="button" class="btn btn-tool" data-toggle="tooltip" title="Mark as read">
-                                  <i class="fa fa-circle-o"></i></button>
-                              <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                              </button>
-                              <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i>
-                              </button>
-                          </div>
-                          <!-- /.card-tools -->
-                      </div>
-                      <!-- /.card-header -->
-                      <div class="card-body">
-                          <!-- post text -->
-                          <p>Far far away, behind the word mountains, far from the
-                              countries Vokalia and Consonantia, there live the blind
-                              texts. Separated they live in Bookmarksgrove right at</p>
+            <div class="col-md-6">
+                <!-- Box Comment -->
+                <div class="card card-widget">
+                    <div class="card-header">
+                        <div class="user-block">
+                            <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
+                            <span class="username"><a href="#">张千</a></span>
+                            <span class="description">公共分享 - 下午 7:30 今日</span>
+                        </div>
+                        <!-- /.user-block -->
+                        <div class="card-tools">
+                            <button type="button" class="btn btn-tool" data-toggle="tooltip" title="Mark as read">
+                                <i class="fa fa-circle-o"></i></button>
+                            <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i>
+                            </button>
+                        </div>
+                        <!-- /.card-tools -->
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-body">
+                        <h5>服务器安装经验总结</h5>
+                        <p>服务器，也称伺服器，是提供计算服务的设备。由于服务器需要响应服务请求，并进行处理，
+                            因此一般来说服务器应具备承担服务并且保障服务的能力。服务器的构成包括处理器、硬盘、内存、系统总线等，
+                            和通用的计算机架构类似，但是由于需要提供高可靠的服务，因此在处理能力、稳定性、可靠性、安全性.</p>
+                        <!-- post text -->
+                        <p>第一：我们首先应该配置服务器的外部接口。你应该已经知道如何做到这一点，并且可能已经完成了。
+                            如果你不这样做，那么现在就这样做。</p>
+                        <p>第二：现在我们调出内部接口。根据我们选择的数字，服务器的内部接口是192.168.40.254。
+                            所以我们必须配置该接口。</p>
 
-                          <p>the coast of the Semantics, a large language ocean.
-                              A small river named Duden flows by their place and supplies
-                              it with the necessary regelialia. It is a paradisematic
-                              country, in which roasted parts of sentences fly into
-                              your mouth.</p>
+                        <p>第三：设置路线。 我们现在可以与当地网络上的机器通信，但我们无法访问其他内部网络。
+                            这需要更多的代码行。为了访问其他子网上的其他计算机，我们需要一条路由来告知流量到Cisco路由器。
+                            这是那条线：＃/ sbin / route add -net 192.168.0.0 gw 192.168.254.254 netmask
+                            255.255.0.0 dev eth1</p>
 
-                          <!-- Attachment -->
-                          <div class="attachment-block clearfix">
-                              <img class="attachment-img" src="../dist/img/photo1.png" alt="Attachment Image">
+                        <!-- Social sharing buttons -->
+                        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i> 分享</button>
+                        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-thumbs-o-up"></i> 赞</button>
+                        <span class="float-right text-muted">45 赞 - 2 评论</span>
+                    </div>
+                    <!-- /.card-body -->
+                    <div class="card-footer card-comments">
+                        <div class="card-comment">
+                            <!-- User image -->
+                            <img class="img-circle img-sm" src="../dist/img/user6-128x128.jpg" alt="User Image">
 
-                              <div class="attachment-pushed">
-                                  <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Lorem ipsum text generator</a></h4>
-
-                                  <div class="attachment-text">
-                                      Description about the attachment can be placed here.
-                                      Lorem Ipsum is simply dummy text of the printing and typesetting industry... <a href="#">more</a>
-                                  </div>
-                                  <!-- /.attachment-text -->
-                              </div>
-                              <!-- /.attachment-pushed -->
-                          </div>
-                          <!-- /.attachment-block -->
-
-                          <!-- Social sharing buttons -->
-                          <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i> Share</button>
-                          <button type="button" class="btn btn-default btn-sm"><i class="fa fa-thumbs-o-up"></i> Like</button>
-                          <span class="float-right text-muted">45 likes - 2 comments</span>
-                      </div>
-                      <!-- /.card-body -->
-                      <div class="card-footer card-comments">
-                          <div class="card-comment">
-                              <!-- User image -->
-                              <img class="img-circle img-sm" src="../dist/img/user3-128x128.jpg" alt="User Image">
-
-                              <div class="comment-text">
+                            <div class="comment-text">
                     <span class="username">
-                      Maria Gonzales
-                      <span class="text-muted float-right">8:03 PM Today</span>
+                      迟瑞
+                      <span class="text-muted float-right"> 下午 8:03 今天</span>
                     </span><!-- /.username -->
-                                  It is a long established fact that a reader will be distracted
-                                  by the readable content of a page when looking at its layout.
-                              </div>
-                              <!-- /.comment-text -->
-                          </div>
-                          <!-- /.card-comment -->
-                          <div class="card-comment">
-                              <!-- User image -->
-                              <img class="img-circle img-sm" src="../dist/img/user5-128x128.jpg" alt="User Image">
+                                这个经验对我帮助很大，感谢分享这么好的经验。
+                            </div>
+                            <!-- /.comment-text -->
+                        </div>
+                        <!-- /.card-comment -->
+                        <div class="card-comment">
+                            <!-- User image -->
+                            <img class="img-circle img-sm" src="../dist/img/user5-128x128.jpg" alt="User Image">
 
-                              <div class="comment-text">
+                            <div class="comment-text">
                     <span class="username">
-                      Nora Havisham
-                      <span class="text-muted float-right">8:03 PM Today</span>
+                      陆雨
+                      <span class="text-muted float-right">下午 8:03 今天</span>
                     </span><!-- /.username -->
-                                  The point of using Lorem Ipsum is that it has a more-or-less
-                                  normal distribution of letters, as opposed to using
-                                  'Content here, content here', making it look like readable English.
-                              </div>
-                              <!-- /.comment-text -->
-                          </div>
-                          <!-- /.card-comment -->
-                      </div>
-                      <!-- /.card-footer -->
-                      <div class="card-footer">
-                          <form action="#" method="post">
-                              <img class="img-fluid img-circle img-sm" src="../dist/img/user4-128x128.jpg" alt="Alt Text">
-                              <!-- .img-push is used to add margin to elements next to floating images -->
-                              <div class="img-push">
-                                  <input type="text" class="form-control form-control-sm" placeholder="Press enter to post comment">
-                              </div>
-                          </form>
-                      </div>
-                      <!-- /.card-footer -->
-                  </div>
-                  <!-- /.card -->
-              </div>
-              <!-- /.col -->
+                                请问第三步骤中的这个地址具体需要怎么配置呢，还需要使用其他的设备吗？
+                            </div>
+                            <!-- /.comment-text -->
+                        </div>
+                        <!-- /.card-comment -->
+                    </div>
+                    <!-- /.card-footer -->
+                    <div class="card-footer">
+                        <form action="#" method="post">
+                            <img class="img-fluid img-circle img-sm" th:src="@{/images/admin.png}" alt="Alt Text">
+                            <!-- .img-push is used to add margin to elements next to floating images -->
+                            <div class="img-push">
+                                <input type="text" class="form-control form-control-sm" placeholder="输入评论">
+                            </div>
+                        </form>
+                    </div>
+                    <!-- /.card-footer -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.col -->
           </div>
         <!-- /.row -->
       </div><!-- /.container-fluid -->
