--- a/src/main/resources/templates/question/question.html
+++ b/src/main/resources/templates/question/question.html
@@ -86,17 +86,60 @@
                 <div class="col-12">
                     <div class="card card-primary">
                         <div class="card-header">
-                                <h3 class="card-title">答题方式</h3>
+                            <h3 class="card-title">答题方式</h3>
+                        </div>
+                        <form role="form" >
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-4 float-lg-left">
+                                        <div class="form-group">
+                                            <label>题目类型：</label>
+                                            <select class="form-control" name="province">
+                                                <option>随机</option>
+                                                <option>维护</option>
+                                                <option>维修</option>
+                                                <option>标准</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 float-lg-right">
+                                        <div class="form-group">
+                                            <label>题目对象：</label>
+                                            <select class="form-control" name="city">
+                                                <option>随机</option>
+                                                <option>影院</option>
+                                                <option>影厅</option>
+                                                <option>放映厅</option>
+                                                <option>服务器</option>
+                                                <option>影片</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 float-lg-right">
+                                        <div class="form-group">
+                                            <label>题目分值：</label>
+                                            <select class="form-control" name="city">
+                                                <option>随机</option>
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="float-lg-right">
+                                    <button type="submit" class="btn btn-primary">
+                                        <a href="/question/details" style="color: #fff;">在线测试</a>
+                                    </button>
+                                    <span>&nbsp;</span>
+                                    <a href="/question/insert">
+                                        <button type="button" class="btn btn-primary">添加题目</button>
+                                    </a>
+                                </div>
                             </div>
-                        <div class="card-body">
-                            <a href="/question/online">
-                                <button type="button" class="btn btn-primary">在线测试</button>
-                            </a>
-                            <span>&nbsp;</span>
-                            <a href="/question/insert">
-                                <button type="button" class="btn btn-primary">添加题目</button>
-                            </a>
-                    </div>
+                        </form>
                     </div>
                     <div class="card card-primary">
                         <div class="card-header">
