--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -231,16 +231,22 @@
                 <li class="nav-item">
                     <a href="/question/question" class="nav-link">
                         <i class="fa fa-edit nav-icon"></i>
-                        <p>答题管理</p>
+                        <p>题库</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/question/score" class="nav-link">
+                    <a href="/question/details" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
-                        <p>积分管理</p>
+                        <p>答题</p>
                     </a>
                 </li>
             </ul>
+        </li>
+        <li class="nav-item">
+            <a href="/question/score" class="nav-link">
+                <i class="fa fa-search nav-icon"></i>
+                <p>积分管理</p>
+            </a>
         </li>
         <li class="nav-item">
             <a href="/course/online_course" class="nav-link">
