--- a/src/main/resources/templates/system/role.html
+++ b/src/main/resources/templates/system/role.html
@@ -155,10 +155,11 @@
                                                 <button type="button" class="btn btn-sm" style="color: green">权限操作</button>
                                             </a>
                                         </div>
-                                    </td>                                </tr>
+                                    </td>
+                                </tr>
                                 <tr>
-                                    <td>院线公司/影院管理公司</td>
-                                    <td>院线公司/影院管理公司登录后，有用户管理、权限管理、个人信息管理二级目录，仅可查看自己管理的影院的用户及权限</td>
+                                    <td>院线公司</td>
+                                    <td>院线公司登录后，有用户管理、权限管理、个人信息管理二级目录，仅可查看自己管理的影院的用户及权限</td>
                                     <td>1</td>
                                     <td>
                                         <div class="float-lg-left">
@@ -166,7 +167,20 @@
                                                 <button type="button" class="btn btn-sm" style="color: green">权限操作</button>
                                             </a>
                                         </div>
-                                    </td>                                </tr>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>影院管理公司</td>
+                                    <td>影院管理公司登录后，有用户管理、权限管理、个人信息管理二级目录，仅可查看自己管理的影院的用户及权限</td>
+                                    <td>1</td>
+                                    <td>
+                                        <div class="float-lg-left">
+                                            <a href="#" style="color: #ffffff;">
+                                                <button type="button" class="btn btn-sm" style="color: green">权限操作</button>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>影院管理员</td>
                                     <td>影院管理员登录后，有用户管理、权限管理、个人信息管理二级目录，仅可查看本影院的用户及权限</td>
@@ -177,7 +191,8 @@
                                                 <button type="button" class="btn btn-sm" style="color: green">权限操作</button>
                                             </a>
                                         </div>
-                                    </td>                                </tr>
+                                    </td>
+                                </tr>
                                 <tr>
                                     <td>影院普通用户</td>
                                     <td>影院普通登录后，仅有个人信息管理二级目录，仅可修改个人信息。</td>
