optimize the front page

--- a/src/main/resources/templates/documents/operate_course.html
+++ b/src/main/resources/templates/documents/operate_course.html
@@ -94,31 +94,49 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group row">
-                    <div class="col-4">
-                      <label>教程类型</label>
+                    <div class="col-3">
+                      <label>设备种类</label>
                       <div class="form-group">
-                        <!--<label>Select</label>-->
                         <select class="form-control">
-                          <option>安装教程</option>
-                          <option>维修教程</option>
-                          <option>维护教程</option>
+                          <option>放映机</option>
+                          <option>功放</option>
+                          <option>音响</option>
+                          <option>服务器</option>
+                          <option>屏幕</option>
                         </select>
                       </div>
                     </div>
-                    <div class="col-4">
-                      <label>教程对象</label>
+                    <div class="col-3">
+                      <label>设备类型</label>
                       <div class="form-group">
-                        <!--<label>Select</label>-->
                         <select class="form-control">
-                          <option>放映机教程</option>
-                          <option>影院标准</option>
-                          <option>影厅标准</option>
+                          <option>氙灯</option>
+                          <option>汞灯</option>
+                          <option>激光</option>
                         </select>
                       </div>
                     </div>
-                    <div class="col-4">
-                      <label>教程名称：</label>
-                      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：XX 设备维护教程">
+                    <div class="col-3">
+                      <label>设备品牌</label>
+                      <div class="form-group">
+                        <select class="form-control">
+                          <option>巴克</option>
+                          <option>可视</option>
+                          <option>杜比</option>
+                          <option>索尼</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <label>设备型号</label>
+                      <div class="form-group">
+                        <select class="form-control">
+                          <option>B 系列</option>
+                          <option>C 系列</option>
+                          <option>D 系列</option>
+                          <option>S 系列</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
                 <!-- /.card-body -->
