--- a/src/main/resources/templates/base/cinema/search.html
+++ b/src/main/resources/templates/base/cinema/search.html
@@ -121,13 +121,13 @@
                   <!-- /.card-body -->
                 <div class="form-group">
                     <div class="row col-sm-4 float-right">
-                      <div style="margin-left: 175px;">
+                      <div style="margin-left: 180px;">
                         <button type="submit" class="btn btn-primary">筛选</button>
                         <span class="col-sm-2"> &nbsp; &nbsp;</span>
                         <button type="button" class="btn btn-primary">导入</button>
                         <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                        <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
-                          <button type="button" class="btn btn-primary ">添加</button>
+                        <a href="/base/cinema/insert" style="color: #ffffff;">
+                          <button type="button" class="btn btn-primary">添加</button>
                         </a>
                       </div>
                     </div>
