--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -158,6 +158,23 @@
                 <!-- Main row -->
                 <div class="row">
                     <div class="col-lg-6">
+                        <div class="card card-danger">
+                        <div class="card-header">
+                            <h3 class="card-title">Donut Chart</h3>
+
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <canvas id="pieChart" style="height: 342px; width: 685px;" width="1370" height="684"></canvas>
+                        </div>
+                        <!-- /.card-body -->
+                    </div>
+                    </div>
+                    <div class="col-lg-6">
                         <div class="card">
                             <div class="card-header no-border">
                                 <div class="d-flex justify-content-between">
@@ -265,7 +282,7 @@
                         <!-- Custom tabs (Charts with tabs)-->
                         <div class="card">
                             <div class="card-header no-border">
-                                <!--                            <div class="card-header d-flex p-0">-->
+<!--                            <div class="card-header d-flex p-0">-->
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group">
                                         <select class="form-control">
@@ -277,18 +294,18 @@
                                         </select>
                                     </div>
                                     <h3 class="card-title">
-                                        <!--                                    <i class="fa fa-pie-chart mr-1"></i>-->
+    <!--                                    <i class="fa fa-pie-chart mr-1"></i>-->
                                         银幕亮度
                                     </h3>
                                     <a href="javascript:void(0);"></a>
-                                    <!--                                    <ul class="nav nav-pills ml-auto p-2">-->
-                                    <!--                                        <li class="nav-item">-->
-                                    <!--                                            <a class="nav-link active" href="#revenue-chart" data-toggle="tab">年份</a>-->
-                                    <!--                                        </li>-->
-                                    <!--                                        <li class="nav-item">-->
-                                    <!--                                            <a class="nav-link" href="#sales-chart" data-toggle="tab">总量</a>-->
-                                    <!--                                        </li>-->
-                                    <!--                                    </ul>-->
+<!--                                    <ul class="nav nav-pills ml-auto p-2">-->
+<!--                                        <li class="nav-item">-->
+<!--                                            <a class="nav-link active" href="#revenue-chart" data-toggle="tab">年份</a>-->
+<!--                                        </li>-->
+<!--                                        <li class="nav-item">-->
+<!--                                            <a class="nav-link" href="#sales-chart" data-toggle="tab">总量</a>-->
+<!--                                        </li>-->
+<!--                                    </ul>-->
                                 </div>
                             </div><!-- /.card-header -->
                             <div class="card-body">
@@ -641,7 +658,7 @@
                                         </select>
                                     </div>
                                     <h3 class="card-title">
-                                        <!--                                        <i class="fa fa-th mr-1"></i>-->
+<!--                                        <i class="fa fa-th mr-1"></i>-->
                                         声压等级
                                     </h3>
                                     <a href="javascript:void(0);"></a>
@@ -666,32 +683,32 @@
                                 <div class="chart" id="line-chart" style="height: 250px;"></div>
                             </div>
                             <!-- /.card-body -->
-                            <!--                            <div class="card-footer bg-transparent">-->
-                            <!--                                <div class="row">-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
+<!--                            <div class="card-footer bg-transparent">-->
+<!--                                <div class="row">-->
+<!--                                    <div class="col-4 text-center">-->
+<!--                                        <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"-->
+<!--                                               data-fgColor="#39CCCC">-->
 
-                            <!--                                        <div class="text-white">故障</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
+<!--                                        <div class="text-white">故障</div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+<!--                                    <div class="col-4 text-center">-->
+<!--                                        <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"-->
+<!--                                               data-fgColor="#39CCCC">-->
 
-                            <!--                                        <div class="text-white">正常</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
+<!--                                        <div class="text-white">正常</div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+<!--                                    <div class="col-4 text-center">-->
+<!--                                        <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"-->
+<!--                                               data-fgColor="#39CCCC">-->
 
-                            <!--                                        <div class="text-white">在修</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                </div>-->
-                            <!--                                &lt;!&ndash; /.row &ndash;&gt;-->
-                            <!--                            </div>-->
+<!--                                        <div class="text-white">在修</div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; /.row &ndash;&gt;-->
+<!--                            </div>-->
                             <!-- /.card-footer -->
                         </div>
                         <!-- /.card -->
@@ -793,5 +810,78 @@
 <script th:src="@{/dist/js/pages/dashboard3.js}"></script>
 <!-- OPTIONAL SCRIPTS -->
 <script th:src="@{/plugins/chart.js/Chart.min.js}"></script>
+<!--<script>-->
+<!--    //-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<!--    //- PIE CHART - -->
+<!--    //-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
+<!--    // Get context with jQuery - using jQuery's .get() method.-->
+<!--    var pieChartCanvas = $('#pieChart').get(0).getContext('2d')-->
+<!--    var pieChart       = new Chart(pieChartCanvas)-->
+<!--    var PieData        = [-->
+<!--        {-->
+<!--            value    : 700,-->
+<!--            color    : '#f56954',-->
+<!--            highlight: '#f56954',-->
+<!--            label    : 'Chrome'-->
+<!--        },-->
+<!--        {-->
+<!--            value    : 500,-->
+<!--            color    : '#00a65a',-->
+<!--            highlight: '#00a65a',-->
+<!--            label    : 'IE'-->
+<!--        },-->
+<!--        {-->
+<!--            value    : 400,-->
+<!--            color    : '#f39c12',-->
+<!--            highlight: '#f39c12',-->
+<!--            label    : 'FireFox'-->
+<!--        },-->
+<!--        {-->
+<!--            value    : 600,-->
+<!--            color    : '#00c0ef',-->
+<!--            highlight: '#00c0ef',-->
+<!--            label    : 'Safari'-->
+<!--        },-->
+<!--        {-->
+<!--            value    : 300,-->
+<!--            color    : '#3c8dbc',-->
+<!--            highlight: '#3c8dbc',-->
+<!--            label    : 'Opera'-->
+<!--        },-->
+<!--        {-->
+<!--            value    : 100,-->
+<!--            color    : '#d2d6de',-->
+<!--            highlight: '#d2d6de',-->
+<!--            label    : 'Navigator'-->
+<!--        }-->
+<!--    ]-->
+<!--    var pieOptions     = {-->
+<!--        //Boolean - Whether we should show a stroke on each segment-->
+<!--        segmentShowStroke    : true,-->
+<!--        //String - The colour of each segment stroke-->
+<!--        segmentStrokeColor   : '#fff',-->
+<!--        //Number - The width of each segment stroke-->
+<!--        segmentStrokeWidth   : 2,-->
+<!--        //Number - The percentage of the chart that we cut out of the middle-->
+<!--        percentageInnerCutout: 50, // This is 0 for Pie charts-->
+<!--        //Number - Amount of animation steps-->
+<!--        animationSteps       : 100,-->
+<!--        //String - Animation easing effect-->
+<!--        animationEasing      : 'easeOutBounce',-->
+<!--        //Boolean - Whether we animate the rotation of the Doughnut-->
+<!--        animateRotate        : true,-->
+<!--        //Boolean - Whether we animate scaling the Doughnut from the centre-->
+<!--        animateScale         : false,-->
+<!--        //Boolean - whether to make the chart responsive to window resizing-->
+<!--        responsive           : true,-->
+<!--        // Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container-->
+<!--        maintainAspectRatio  : true,-->
+<!--        //String - A legend template-->
+<!--        legendTemplate       : '<ul class="<%=name.toLowerCase()%>-legend"><% for (var i=0; i<segments.length; i++){%><li><span style="background-color:<%=segments[i].fillColor%>"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>'-->
+<!--    }-->
+<!--    //Create pie or douhnut chart-->
+<!--    // You can switch between pie and douhnut using the method below.-->
+<!--    pieChart.Doughnut(PieData, pieOptions)-->
+<!--</script>-->
 </body>
 </html>
