modified the ai page

--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -257,7 +257,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/chat/chat" class="nav-link">
+            <a href="/chat/list" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     经验交流
