--- a/src/main/resources/templates/question/details.html
+++ b/src/main/resources/templates/question/details.html
@@ -304,6 +304,7 @@
           }
           questionJson.push(newQuestion)
         }
+        console.log(questionJson)
       })
       //JSON of questions
       console.log("Initial");
