--- a/src/main/resources/templates/chat/list.html
+++ b/src/main/resources/templates/chat/list.html
@@ -14,6 +14,11 @@
   <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <style>
+      tbody tr{
+          cursor: pointer;
+      }
+  </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -135,98 +140,107 @@
           <!-- /.col -->
         </div>
         <!-- /.row -->
-        <!-- Direct Chat -->
-        <h5 class="mb-2">经验详情</h5>
-        <div class="row">
-            <div class="col-md-12">
-                <!-- Box Comment -->
-                <div class="card card-widget">
-                    <div class="card-header">
-                        <div class="user-block">
-                            <img class="img-circle" src="../dist/img/user1-128x128.jpg" alt="User Image">
-                            <span class="username"><a href="#">张千</a></span>
-                            <span class="description">公共分享 - 下午 7:30 今日</span>
-                        </div>
-                        <!-- /.user-block -->
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-toggle="tooltip" title="Mark as read">
-                                <i class="fa fa-circle-o"></i></button>
-                            <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i>
-                            </button>
-                        </div>
-                        <!-- /.card-tools -->
-                    </div>
-                    <!-- /.card-header -->
-                    <div class="card-body">
-                        <h5>服务器安装经验总结</h5>
-                        <p>服务器，也称伺服器，是提供计算服务的设备。由于服务器需要响应服务请求，并进行处理，
-                            因此一般来说服务器应具备承担服务并且保障服务的能力。服务器的构成包括处理器、硬盘、内存、系统总线等，
-                            和通用的计算机架构类似，但是由于需要提供高可靠的服务，因此在处理能力、稳定性、可靠性、安全性.</p>
-                        <!-- post text -->
-                        <p>第一：我们首先应该配置服务器的外部接口。你应该已经知道如何做到这一点，并且可能已经完成了。
-                            如果你不这样做，那么现在就这样做。</p>
-                        <p>第二：现在我们调出内部接口。根据我们选择的数字，服务器的内部接口是192.168.40.254。
-                            所以我们必须配置该接口。</p>
-
-                        <p>第三：设置路线。 我们现在可以与当地网络上的机器通信，但我们无法访问其他内部网络。
-                            这需要更多的代码行。为了访问其他子网上的其他计算机，我们需要一条路由来告知流量到Cisco路由器。
-                            这是那条线：＃/ sbin / route add -net 192.168.0.0 gw 192.168.254.254 netmask
-                            255.255.0.0 dev eth1</p>
-
-                        <!-- Social sharing buttons -->
-                        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i> 分享</button>
-                        <button type="button" class="btn btn-default btn-sm"><i class="fa fa-thumbs-o-up"></i> 赞</button>
-                        <span class="float-right text-muted">45 赞 - 2 评论</span>
-                    </div>
-                    <!-- /.card-body -->
-                    <div class="card-footer card-comments">
-                        <div class="card-comment">
-                            <!-- User image -->
-                            <img class="img-circle img-sm" src="../dist/img/user6-128x128.jpg" alt="User Image">
-
-                            <div class="comment-text">
-                    <span class="username">
-                      迟瑞
-                      <span class="text-muted float-right"> 下午 8:03 今天</span>
-                    </span><!-- /.username -->
-                                这个经验对我帮助很大，感谢分享这么好的经验。
-                            </div>
-                            <!-- /.comment-text -->
-                        </div>
-                        <!-- /.card-comment -->
-                        <div class="card-comment">
-                            <!-- User image -->
-                            <img class="img-circle img-sm" src="../dist/img/user5-128x128.jpg" alt="User Image">
-
-                            <div class="comment-text">
-                    <span class="username">
-                      陆雨
-                      <span class="text-muted float-right">下午 8:03 今天</span>
-                    </span><!-- /.username -->
-                                请问第三步骤中的这个地址具体需要怎么配置呢，还需要使用其他的设备吗？
-                            </div>
-                            <!-- /.comment-text -->
-                        </div>
-                        <!-- /.card-comment -->
-                    </div>
-                    <!-- /.card-footer -->
-                    <div class="card-footer">
-                        <form action="#" method="post">
-                            <img class="img-fluid img-circle img-sm" th:src="@{/images/admin.png}" alt="Alt Text">
-                            <!-- .img-push is used to add margin to elements next to floating images -->
-                            <div class="img-push">
-                                <input type="text" class="form-control form-control-sm" placeholder="输入评论">
-                            </div>
-                        </form>
-                    </div>
-                    <!-- /.card-footer -->
-                </div>
-                <!-- /.card -->
-            </div>
-            <!-- /.col -->
+          <h5 class="mb-2">经验信息</h5>
+        <!-- Board -->
+          <div class="card">
+              <div class="card-body p-0" style="border-top-left-radius: .25rem;border-top-right-radius: .25rem;">
+                  <table class="table table-hover table-valign-middle">
+                      <thead>
+                      <tr>
+                          <th style="width:7rem;">序号</th>
+                          <th style="width: 38rem;">标题</th>
+                          <th>作者</th>
+                          <th>回复</th>
+                          <th>最后发表</th>
+                          <th>活跃时间</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr id="list1" href="/chat/board">
+                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>
+<!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
+                              服务器安装经验总结
+                          </td>
+                          <td>
+                              <i class="fa fa-user-circle fa-2x"></i>
+                              <span>张千</span>
+                          </td>
+                          <td>
+                              123
+                          </td>
+                          <td>
+                              张千
+                          </td>
+                          <td>
+                              13:33
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>
+                              <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
+                              服务器安装经验总结
+                          </td>
+                          <td>
+                              <i class="fa fa-user-circle fa-2x"></i>
+                              <span>张千</span>
+                          </td>
+                          <td>
+                              123
+                          </td>
+                          <td>
+                              张千
+                          </td>
+                          <td>
+                              13:33
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>
+                              <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
+                              服务器安装经验总结
+                          </td>
+                          <td>
+                              <i class="fa fa-user-circle fa-2x"></i>
+                              <span>张千</span>
+                          </td>
+                          <td>
+                              123
+                          </td>
+                          <td>
+                              张千
+                          </td>
+                          <td>
+                              13:33
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>
+                              <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
+                              服务器安装经验总结
+                          </td>
+                          <td>
+                              <i class="fa fa-user-circle fa-2x"></i>
+                              <span>张千</span>
+                          </td>
+                          <td>
+                              123
+                          </td>
+                          <td>
+                              张千
+                          </td>
+                          <td>
+                              13:33
+                          </td>
+                      </tr>
+                      </tbody>
+                  </table>
+              </div>
           </div>
+          <!-- /.card -->
         <!-- /.row -->
       </div><!-- /.container-fluid -->
     </section>
@@ -250,5 +264,12 @@
 <script th:src="@{/dist/js/adminlte.min.js}"></script>
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/dist/js/demo.js}"></script>
+<script>
+    $(function () {
+        $("#list1").click(function () {
+            window.location.href="chat";
+        })
+    })
+</script>
 </body>
 </html>
