modified ai front page

--- a/src/main/resources/templates/assets/details.html
+++ b/src/main/resources/templates/assets/details.html
@@ -301,7 +301,7 @@
                       <td>IMAC厅</td>
                       <td>120</td>
                       <td>-</td>
-                      <td><a th:href="@{/base/cinema/details_room}"> 详情>></a></td>
+                      <td><a th:href="@{/assets/details_room}"> 详情>></a></td>
                     </tr>
                     <tr>
                       <td>2</td>
