--- a/src/main/resources/templates/documents/hand_details.html
+++ b/src/main/resources/templates/documents/hand_details.html
@@ -163,15 +163,16 @@
                     </tr>
                     </tbody>
                   </table>
+                      <div class="col-11">
+                          <button style="float: right" type="submit" class="btn btn-info">答题</button>
+                      </div>
 				  </div>
                   <div class="col-6 table-responsive">
                   <h4>&nbsp&nbsp&nbsp操作视频</h4>
                   <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
                     <span>&nbsp;</span>
                   </video>
-                  <div class="col-11">
-                    <button style="float: left" type="submit" class="btn btn-info">答题</button>
-                  </div>
+
                 </div>
 
                 <!-- /.col -->
