--- a/src/main/resources/templates/ai/direction_chat.html
+++ b/src/main/resources/templates/ai/direction_chat.html
@@ -211,6 +211,13 @@
                   <td>小张</td>
                   <td><span class="badge bg-success">已回复</span></td>
                 </tr>
+                <tr>
+                  <td>
+                    <img th:src="@{/dist/img/default-150x150.png}" alt="Product 1" class="img-circle img-size-32 mr-2">
+                  </td>
+                  <td>小张</td>
+                  <td><span class="badge bg-success">已回复</span></td>
+                </tr>
                 </tbody>
               </table>
             </div>
@@ -238,7 +245,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <!-- Conversations are loaded here -->
-                <div class="direct-chat-messages" style="height:450px;">
+                <div class="direct-chat-messages" style="height:420px;">
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
@@ -336,202 +343,15 @@
                     </span>
                   </div>
                 </form>
+                <textarea id="editor1" name="editor1" style="width: 100%; display: none;" text="备忘录">
+                  备忘录
+                </textarea>
               </div>
               <!-- /.card-footer-->
             </div>
             <!--/.direct-chat -->
           </div>
           <!-- /.col -->
-
-<!--          <div class="col-md-3">-->
-<!--            &lt;!&ndash; DIRECT CHAT PRIMARY &ndash;&gt;-->
-<!--            <div class="card card-warning direct-chat direct-chat-warning">-->
-<!--              <div class="card-header">-->
-<!--                <h3 class="card-title">会话列表 3</h3>-->
-
-<!--                <div class="card-tools">-->
-<!--                  <span data-toggle="tooltip" title="3 New Messages" class="badge bg-warning">3</span>-->
-<!--                  <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>-->
-<!--                  </button>-->
-<!--                  <button type="button" class="btn btn-tool" data-toggle="tooltip" title="Contacts"-->
-<!--                          data-widget="chat-pane-toggle">-->
-<!--                    <i class="fa fa-comments"></i></button>-->
-<!--                  <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i>-->
-<!--                  </button>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-header &ndash;&gt;-->
-<!--              <div class="card-body">-->
-<!--                &lt;!&ndash; Conversations are loaded here &ndash;&gt;-->
-<!--                <div class="direct-chat-messages">-->
-<!--                  &lt;!&ndash; Message. Default to the left &ndash;&gt;-->
-<!--                  <div class="direct-chat-msg right">-->
-<!--                    <div class="direct-chat-info clearfix">-->
-<!--                      <span class="direct-chat-name float-right">张静</span>-->
-<!--                      <span class="direct-chat-timestamp float-left">10月21日 14:00</span>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-info &ndash;&gt;-->
-<!--                    <img class="direct-chat-img" th:src="@{/dist/img/user6-128x128.jpg}" alt="Message User Image">-->
-<!--                    &lt;!&ndash; /.direct-chat-img &ndash;&gt;-->
-<!--                    <div class="direct-chat-text">-->
-<!--                      xxx型号放映机故障码xxx，根据xxx手册进行了xxx操作后出现xxx情况，请问如何解决？-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-text &ndash;&gt;-->
-<!--                  </div>-->
-<!--                  &lt;!&ndash; /.direct-chat-msg &ndash;&gt;-->
-
-<!--                  &lt;!&ndash; Message to the right &ndash;&gt;-->
-<!--                  <div class="direct-chat-msg">-->
-<!--                    <div class="direct-chat-info clearfix">-->
-<!--                      <span class="direct-chat-name float-left">钱三</span>-->
-<!--                      <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-info &ndash;&gt;-->
-<!--                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image">-->
-<!--                    &lt;!&ndash; /.direct-chat-img &ndash;&gt;-->
-<!--                    <div class="direct-chat-text">-->
-<!--                      请你参考异常处理，XXX参考手册XXX页。-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-text &ndash;&gt;-->
-<!--                  </div>-->
-
-<!--                  &lt;!&ndash; /.direct-chat-msg &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash;/.direct-chat-messages&ndash;&gt;-->
-
-<!--                &lt;!&ndash; Contacts are loaded here &ndash;&gt;-->
-<!--                <div class="direct-chat-contacts">-->
-<!--                  <ul class="contacts-list">-->
-<!--                    <li>-->
-<!--                      <a href="#">-->
-<!--                        <img class="contacts-list-img" src="../../static/dist/img/user1-128x128.jpg">-->
-
-<!--                        <div class="contacts-list-info">-->
-<!--                          <span class="contacts-list-name">-->
-<!--                            Count Dracula-->
-<!--                            <small class="contacts-list-date float-right">2/28/2015</small>-->
-<!--                          </span>-->
-<!--                          <span class="contacts-list-msg">How have you been? I was...</span>-->
-<!--                        </div>-->
-<!--                        &lt;!&ndash; /.contacts-list-info &ndash;&gt;-->
-<!--                      </a>-->
-<!--                    </li>-->
-<!--                    &lt;!&ndash; End Contact Item &ndash;&gt;-->
-<!--                  </ul>-->
-<!--                  &lt;!&ndash; /.contatcts-list &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash; /.direct-chat-pane &ndash;&gt;-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-body &ndash;&gt;-->
-<!--              <div class="card-footer">-->
-<!--                <form action="#" method="post">-->
-<!--                  <div class="input-group">-->
-<!--                    <input type="text" name="message" placeholder="输入中……" class="form-control">-->
-<!--                    <span class="input-group-append">-->
-<!--                      <button type="submit" class="btn btn-warning">发送</button>-->
-<!--                    </span>-->
-<!--                  </div>-->
-<!--                </form>-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-footer&ndash;&gt;-->
-<!--            </div>-->
-<!--            &lt;!&ndash;/.direct-chat &ndash;&gt;-->
-<!--          </div>          &lt;!&ndash; /.col &ndash;&gt;-->
-
-<!--          <div class="col-md-3">-->
-<!--            &lt;!&ndash; DIRECT CHAT PRIMARY &ndash;&gt;-->
-<!--            <div class="card card-danger direct-chat direct-chat-danger">-->
-<!--              <div class="card-header">-->
-<!--                <h3 class="card-title">会话列表 4</h3>-->
-
-<!--                <div class="card-tools">-->
-<!--                  <span data-toggle="tooltip" title="3 New Messages" class="badge bg-danger">3</span>-->
-<!--                  <button type="button" class="btn btn-tool" data-widget="collapse"><i class="fa fa-minus"></i>-->
-<!--                  </button>-->
-<!--                  <button type="button" class="btn btn-tool" data-toggle="tooltip" title="Contacts"-->
-<!--                          data-widget="chat-pane-toggle">-->
-<!--                    <i class="fa fa-comments"></i></button>-->
-<!--                  <button type="button" class="btn btn-tool" data-widget="remove"><i class="fa fa-times"></i>-->
-<!--                  </button>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-header &ndash;&gt;-->
-<!--              <div class="card-body">-->
-<!--                &lt;!&ndash; Conversations are loaded here &ndash;&gt;-->
-<!--                <div class="direct-chat-messages">-->
-<!--                  &lt;!&ndash; Message. Default to the left &ndash;&gt;-->
-<!--                  <div class="direct-chat-msg right">-->
-<!--                    <div class="direct-chat-info clearfix">-->
-<!--                      <span class="direct-chat-name float-right">张静</span>-->
-<!--                      <span class="direct-chat-timestamp float-left">10月21日 14:00</span>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-info &ndash;&gt;-->
-<!--                    <img class="direct-chat-img" th:src="@{/dist/img/user6-128x128.jpg}" alt="Message User Image">-->
-<!--                    &lt;!&ndash; /.direct-chat-img &ndash;&gt;-->
-<!--                    <div class="direct-chat-text">-->
-<!--                      xxx型号放映机故障码xxx，根据xxx手册进行了xxx操作后出现xxx情况，请问如何解决？-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-text &ndash;&gt;-->
-<!--                  </div>-->
-<!--                  &lt;!&ndash; /.direct-chat-msg &ndash;&gt;-->
-
-<!--                  &lt;!&ndash; Message to the right &ndash;&gt;-->
-<!--                  <div class="direct-chat-msg">-->
-<!--                    <div class="direct-chat-info clearfix">-->
-<!--                      <span class="direct-chat-name float-left">刘进</span>-->
-<!--                      <span class="direct-chat-timestamp float-right">10月21日 14:05 </span>-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-info &ndash;&gt;-->
-<!--                    <img class="direct-chat-img" th:src="@{/dist/img/user1-128x128.jpg}" alt="Message User Image">-->
-<!--                    &lt;!&ndash; /.direct-chat-img &ndash;&gt;-->
-<!--                    <div class="direct-chat-text">-->
-<!--                      请你参考异常处理，XXX参考手册XXX页。-->
-<!--                    </div>-->
-<!--                    &lt;!&ndash; /.direct-chat-text &ndash;&gt;-->
-<!--                  </div>-->
-
-<!--                  &lt;!&ndash; /.direct-chat-msg &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash;/.direct-chat-messages&ndash;&gt;-->
-
-<!--                &lt;!&ndash; Contacts are loaded here &ndash;&gt;-->
-<!--                <div class="direct-chat-contacts">-->
-<!--                  <ul class="contacts-list">-->
-<!--                    <li>-->
-<!--                      <a href="#">-->
-<!--                        <img class="contacts-list-img" src="../../static/dist/img/user1-128x128.jpg">-->
-
-<!--                        <div class="contacts-list-info">-->
-<!--                          <span class="contacts-list-name">-->
-<!--                            Count Dracula-->
-<!--                            <small class="contacts-list-date float-right">2/28/2015</small>-->
-<!--                          </span>-->
-<!--                          <span class="contacts-list-msg">How have you been? I was...</span>-->
-<!--                        </div>-->
-<!--                        &lt;!&ndash; /.contacts-list-info &ndash;&gt;-->
-<!--                      </a>-->
-<!--                    </li>-->
-<!--                    &lt;!&ndash; End Contact Item &ndash;&gt;-->
-<!--                  </ul>-->
-<!--                  &lt;!&ndash; /.contatcts-list &ndash;&gt;-->
-<!--                </div>-->
-<!--                &lt;!&ndash; /.direct-chat-pane &ndash;&gt;-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-body &ndash;&gt;-->
-<!--              <div class="card-footer">-->
-<!--                <form action="#" method="post">-->
-<!--                  <div class="input-group">-->
-<!--                    <input type="text" name="message" placeholder="输入中……" class="form-control">-->
-<!--                    <span class="input-group-append">-->
-<!--                      <button type="submit" class="btn btn-danger">发送</button>-->
-<!--                    </span>-->
-<!--                  </div>-->
-<!--                </form>-->
-<!--              </div>-->
-<!--              &lt;!&ndash; /.card-footer&ndash;&gt;-->
-<!--            </div>-->
-<!--            &lt;!&ndash;/.direct-chat &ndash;&gt;-->
-<!--          </div>-->
           <!-- /.col -->
         </div>
         <!-- /.row -->
