--- a/src/main/resources/templates/assets/search.html
+++ b/src/main/resources/templates/assets/search.html
@@ -178,7 +178,7 @@
                     </a>
                   </div>
                 </td>
-                <td ><a th:href="@{/details}">详情>></a></td>
+                <td ><a th:href="@{/assets/details}">详情>></a></td>
               </tr>
               </tbody>
             </table>
