--- a/src/main/resources/templates/base/equipment/show.html
+++ b/src/main/resources/templates/base/equipment/show.html
@@ -137,13 +137,17 @@
                                         <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                                     </div>
                                 </div>
-                                <div class="card-footer">
-                                    <div class="row col-sm-2 float-lg-right">
-                                        <button type="submit" class="btn btn-primary">查询</button>
-                                        <span class="col-sm-2"> &nbsp;&nbsp;</span>
-                                        <a href="/base/equipment/insert" style="color: #ffffff;">
-                                            <button type="button" class="btn btn-primary">添加</button>
-                                        </a>
+                                <div class="form-group">
+                                    <div class="row col-sm-4 float-right">
+                                        <div style="margin-left: 180px;">
+                                            <button type="submit" class="btn btn-primary">筛选</button>
+                                            <span class="col-sm-2"> &nbsp; &nbsp;</span>
+                                            <button type="button" class="btn btn-primary">导入</button>
+                                            <span class="col-sm-2"> &nbsp; &nbsp;</span>
+                                            <a href="/base/equipment/insert" style="color: #ffffff;">
+                                                <button type="button" class="btn btn-primary ">添加</button>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
