--- a/src/main/resources/templates/base/standard/search.html
+++ b/src/main/resources/templates/base/standard/search.html
@@ -115,12 +115,12 @@
                 <!-- /.card-body -->
                 <div class="form-group">
                   <div class="row col-sm-4 float-right">
-                    <div style="margin-left: 175px;">
+                    <div style="margin-left: 180px;">
                       <button type="submit" class="btn btn-primary">筛选</button>
                       <span class="col-sm-2"> &nbsp; &nbsp;</span>
                       <button type="button" class="btn btn-primary">导入</button>
                       <span class="col-sm-2"> &nbsp; &nbsp;</span>
-                      <a href="/base/cinema/insert" style="color: #ffffff;" class="col-sm-2">
+                      <a href="/base/standard/insert" style="color: #ffffff;">
                         <button type="button" class="btn btn-primary ">添加</button>
                       </a>
                     </div>
@@ -129,10 +129,48 @@
               </div>
             </form>
           </div>
+          <div class="card card-primary">
+            <div class="card-header">
+              <h3 class="card-title">基础信息检索结果</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+              <table id="example1" class="table table-bordered table-striped">
+                <thead>
+                <tr>
+                  <th>影院名称</th>
+                  <th>省市区</th>
+                  <th>地址</th>
+                  <th>影院经理</th>
+                  <th>经理电话</th>
+                  <th>影院主管</th>
+                  <th>主管电话</th>
+                  <th>影厅数量</th>
+                  <th>详情</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="cinema : ${cinemas}">
+                  <td th:text="${cinema.cinemaName}">北京XXX影城</td>
+                  <td th:text="${cinema.province + cinema.city}">北京市 朝阳区</td>
+                  <td th:text="${cinema.address}">平乐园100号</td>
+                  <td th:text="${cinema.responsible}">张三</td>
+                  <td th:text="${cinema.responsiblePhone}">140000</td>
+                  <td th:text="${cinema.manager}">ac</td>
+                  <td th:text="${cinema.managerPhone}">dfjlsd</td>
+                  <td th:text="${cinema.roomNumber}">1300000000</td>
+                  <th><a href="/details">详情</a></th>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- /.card-body -->
+          </div>
           <!-- /.card -->
         </div>
         <!-- /.card -->
       </div>
+    </section>
       <!-- /.col -->
   </div>
   <!-- /.row -->
